--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "typeorm migration:create src/migrations/migration"
+    "migrate": "typeorm migration:generate src/migrations/migration -d src/dataSource/index.ts"
   },
   "author": "",
   "license": "ISC",
