--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
     "type": "postgres",
     "host": "localhost",
-    "port": 5433,
+    "port": 8888,
     "username": "postgres",
     "password": "jim60308",
-    "database": "express",
+    "database": "tutorial",
     "synchronize": false,
     "logging": false,
     "entities": [
